--- a/main.ipynb
+++ b/main.ipynb
@@ -44,7 +44,108 @@
     "    f.write(\"\\n\".join(data_asins))\n",
     "    \n",
     "# Cerrar el navegador\n",
-    "driver.quit()\n"
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import http.client\n",
+    "import json\n",
+    "\n",
+    "API_KEYS = [\n",
+    "    \"b8c33a42admsh1eb667b2e78c8dcp1d2e65jsnce7335e1d5b4\",\n",
+    "    \"fdcd4c06b5msha7a5970ae873ae9p1d5117jsnaa7f64e9591a\",\n",
+    "    \"API_KEY_3\"\n",
+    "]\n",
+    "current_api_index = 0 \n",
+    "# ASIN_LIST = [\"B0DL4831YZ\", \"B0DHZJW5Z4\", \"B0BRQMC66M\", \"B0CTHYFRHH\", \"B0CPLLJ367\", \"B0D2RQ8R19\", \"B0CV7R71NY\"]\n",
+    "ASIN_LIST = data_asins\n",
+    "products_data = []\n",
+    "\n",
+    "for asin in ASIN_LIST:\n",
+    "    success = False\n",
+    "    for _ in range(len(API_KEYS)):\n",
+    "        conn = http.client.HTTPSConnection(\"real-time-amazon-data.p.rapidapi.com\")\n",
+    "        headers = {\n",
+    "            'x-rapidapi-key': API_KEYS[current_api_index],\n",
+    "            'x-rapidapi-host': \"real-time-amazon-data.p.rapidapi.com\"\n",
+    "        }\n",
+    "        # conn.request(\"GET\", f\"/product-details?asin={asin}&country=ES\", headers=headers) Per si volem tots els params altra vegada\n",
+    "        conn.request(\"GET\", f\"/product-details?asin={asin}&country=ES&fields=product_url,asin,product_price,product_original_price,product_title,product_star_rating,product_num_ratings,product_information,product_details\", headers=headers)\n",
+    "        res = conn.getresponse()\n",
+    "        if res.status == 200:\n",
+    "            data = res.read()\n",
+    "            product_info = json.loads(data.decode(\"utf-8\"))\n",
+    "            products_data.append(product_info)\n",
+    "            success = True\n",
+    "            conn.close()\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"Error con API_KEY {current_api_index + 1}: {API_KEYS[current_api_index]}\")\n",
+    "            conn.close()\n",
+    "            current_api_index = (current_api_index + 1) % len(API_KEYS)\n",
+    "            print(f\"Usando API_KEY {current_api_index + 1}: {API_KEYS[current_api_index]}\")\n",
+    "    if not success:\n",
+    "        print(f\"No se pudo obtener información del ASIN {asin} con ninguna API Key.\")\n",
+    "\n",
+    "products_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import re\n",
+    "\n",
+    "def find_value_by_keywords(data_dict, keywords, pattern=None, default=\"null\"):\n",
+    "    for key, value in data_dict.items():\n",
+    "        if any(keyword.lower() in key.lower() for keyword in keywords):\n",
+    "            if pattern is None or re.search(pattern, str(value)):\n",
+    "                return value\n",
+    "    return default \n",
+    "\n",
+    "with open('moviles.csv', mode='w', newline='', encoding='utf-8') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"URL\", \"Asin\", \"Precio\", \"Precio Inicial\", \"Título\", \"Estrellas\", \"Opiniones\", \"Marca\", \"Modelo\", \"Año del modelo\", \"Dimensiones\",\n",
+    "                     \"RAM\", \"Memoria\", \"Sistema operativo\", \"Resolución pantalla\", \"Tamaño pantalla\", \"Relación aspecto\", \"Peso\", \"Tecnología conectividad\", \"Bateria\"])\n",
+    "    for product in products_data:\n",
+    "        url = product[\"data\"].get(\"product_url\", \"null\")\n",
+    "        asin = product[\"data\"].get(\"asin\", \"null\")\n",
+    "        product_price = product[\"data\"].get(\"product_price\", \"null\")\n",
+    "        product_original_price = product[\"data\"].get(\"product_original_price\", \"null\")\n",
+    "        if not product_original_price:\n",
+    "            product_original_price = product_price\n",
+    "        product_original_price = product_original_price.replace(\"€\",\"\")\n",
+    "        product_title = product[\"data\"].get(\"product_title\", \"null\")\n",
+    "        product_star_rating = product[\"data\"].get(\"product_star_rating\", \"null\")\n",
+    "        product_num_ratings = product[\"data\"].get(\"product_num_ratings\", \"null\")\n",
+    "    \n",
+    "        product_details = product[\"data\"].get(\"product_information\", {}) | product[\"data\"].get(\"product_details\", {})\n",
+    "        marca = find_value_by_keywords(product_details, [\"fabricante\", \"marca\"])\n",
+    "        modelo = find_value_by_keywords(product_details, [\"modelo\"])\n",
+    "        ano = find_value_by_keywords(product_details, [\"año\"], r\"\\d+\")\n",
+    "        dimensiones = find_value_by_keywords(product_details, [\"dimensiones\", \"tamaño\", \"medidas\"], r\"\\d+\")\n",
+    "        ram = find_value_by_keywords(product_details, [\"RAM\", \"memoria RAM\"], r\"^(1|2|4|8|16|32|64)\\s?GB$\")\n",
+    "        memoria = find_value_by_keywords(product_details, [\"ROM\", \"memoria\", \"capacidad\"], r\"^(1|32|64|128|256|512|1024)\\s?(GB|TB)$\")\n",
+    "        sistema_operativo = product_details.get(\"Sistema operativo\", \"null\")\n",
+    "        resolucion_pantalla = find_value_by_keywords(product_details, [\"resolucion\", \"resolución\"], r\"\\d+\")\n",
+    "        tamano_pantalla = find_value_by_keywords(product_details, [\"pantalla\", \"pulgadas\"], r\"\\d+\")\n",
+    "        relacion_aspecto = find_value_by_keywords(product_details, [\"relacion\", \"aspecto\"], r\"\\d+\")\n",
+    "        peso = find_value_by_keywords(product_details, [\"peso\", \"masa\"], r\"\\d+\\s?g\")\n",
+    "        tecnologia_conectividad = find_value_by_keywords(product_details, [\"tecnología\", \"conectividad\"], r\"^(4G|5G)$\")\n",
+    "        bateria = find_value_by_keywords(product_details, [\"batería\", \"capacidad batería\", \"mAh\"])\n",
+    "        \n",
+    "        writer.writerow([\n",
+    "            url, asin, product_price, product_original_price, product_title, product_star_rating, product_num_ratings,\n",
+    "            marca, modelo, ano, dimensiones, ram, memoria, sistema_operativo, resolucion_pantalla, tamano_pantalla, relacion_aspecto, peso, tecnologia_conectividad, bateria\n",
+    "        ])\n"
    ]
   }
  ],
