--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4046,7 +4046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4088,7 +4088,7 @@
     "        tamano_pantalla = find_value_by_keywords(product_details, [\"pantalla\", \"pulgadas\"], r\"\\d+\")\n",
     "        relacion_aspecto = find_value_by_keywords(product_details, [\"relacion\", \"aspecto\"], r\"\\d+\")\n",
     "        peso = find_value_by_keywords(product_details, [\"peso\", \"masa\"], r\"\\d+\\s?g\")\n",
-    "        tecnologia_conectividad = find_value_by_keywords(product_details, [\"tecnología\", \"conectividad\"], r\"^(4G|5G)$\")\n",
+    "        tecnologia_conectividad = find_value_by_keywords(product_details, [\"tecnología\", \"conectividad\"], r\"^(2G|3G|4G|5G)$\")\n",
     "        bateria = find_value_by_keywords(product_details, [\"batería\", \"capacidad batería\", \"mAh\"])\n",
     "        \n",
     "        writer.writerow([\n",
