Es guarden els data asin en un fitxer de varies pagines de amazon automaticament.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,24 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B0DHZJW5Z4', 'B0DH243L65', 'B0CPT8SK6H', 'B0CPT9XDS7', 'B0D4SMFD94', 'B0CXJDKQXR', 'B0D2RR7JQZ', 'B0DH2437SY', 'B0D97XWKKT', 'B09D3TZ53M', 'B0DFPRT8V2', 'B0CSG93BF7', 'B0D5292XN3', 'B0CT8TCT6F', 'B0CWS285P6', 'B0CYGJJHFW', 'B07VTP4ZQW', 'B0CNR4SN1Q', 'B0CTHYFRHH', 'B0BVZ65S6Y', 'B0CV4KL9HC', 'B0DL4831YZ', 'B0C6FDCPB1', 'B0BK94F97M', 'B0CN12K224', 'B0DG6JW8PK', 'B08HN8F1MC', 'B0CQJRHSDR', 'B0D2H7LK22', 'B0CQ59K8F9', 'B07VTMHTDF', 'B0DBVDRNK5', 'B0DC7295DJ', 'B0CYLWTZD1', 'B0CN3GWSP4', 'B09LYYYGZN', 'B0CX97VNMH', 'B07NS5QPJM', 'B0CKLTZRX7', 'B09Q48B1SJ', 'B0CMJGC9HP', 'B09QH6KD26', 'B0CR3YMJWG', 'B09QH3JT6P', 'B0CGJJZD1P', 'B0CPXYTPYC', 'B0BYMPCWHN', 'B0DHRQCB1G']\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.edge.service import Service\n",
-    "from webdriver_manager.microsoft import EdgeDriverManager\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
     "# Configurar Selenium con Edge en modo headless\n",
-    "options = webdriver.EdgeOptions()\n",
+    "options = webdriver.ChromeOptions()\n",
     "options.add_argument(\"--headless\")  # No abrir ventana del navegador\n",
     "options.add_argument(\"--disable-blink-features=AutomationControlled\")  # Evitar detección de bot\n",
     "options.add_argument(\"start-maximized\")\n",
     "options.add_argument(\"disable-infobars\")\n",
     "\n",
     "# Inicializar el driver\n",
-    "driver = webdriver.Edge(service=Service(EdgeDriverManager().install()), options=options)\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
     "\n",
     "# URL de búsqueda en Amazon España\n",
     "url = \"https://www.amazon.es/s?k=mobil&__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=18LZTS0F1Q8I7&sprefix=mobil%2Caps%2C125&ref=nb_sb_noss_1\"\n",
@@ -45,6 +53,88 @@
     "    \n",
     "# Cerrar el navegador\n",
     "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Codi per carregar totes les pàgines "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No hay botón\n",
+      "['B0DHZJW5Z4', 'B0CPT8SK6H', 'B0DH243L65', 'B0CXJDKQXR', 'B0DFPRT8V2', 'B0DH2437SY', 'B0CPT9XDS7', 'B0D2RR7JQZ', 'B0CTHYFRHH', 'B0CYGJJHFW', 'B0CWS285P6', 'B0CSG93BF7', 'B0D4SMFD94', 'B0CN3GWSP4', 'B0DL4831YZ', 'B0D97XWKKT', 'B0CQ59K8F9', 'B0D5292XN3', 'B0DG6JW8PK', 'B0BVZ65S6Y', 'B0CNR4SN1Q', 'B0DBL2KD59', 'B07VTP4ZQW', 'B0DHZ6LBT8', 'B0DKSR4H2T', 'B0CX272D4J', 'B0CN12K224', 'B0CVQL3L2K', 'B0CV7R71NY', 'B0DCC3FQJ3', 'B0D266YCVL', 'B07VTMHTDF', 'B0CXHC9B82', 'B0CN137WV2', 'B0DJ2XZHLZ', 'B0BXJ8VY2V', 'B0DHRQCB1G', 'B0CYLWTZD1', 'B0C6FDCPB1', 'B0DKP63HXT', 'B0DMCLZBYX', 'B0DL2XNSPR', 'B0CFV31YBL', 'B0DL48WY7G', 'B0DH23VGF7', 'B0DGXZ8763', 'B0BW66P9XN', 'B0CQJRHSDR', 'B0C4NHQ6GQ', 'B0D95F21B3', 'B0CMJGC9HP', 'B09Q48B1SJ', 'B0CKLTZRX7', 'B0CQKDBVT8', 'B09QH3JT6P', 'B0DFP5WQSQ', 'B0D8QQ895Q', 'B0CN12BMRW', 'B09QS7K6CP', 'B0DB1P1LH9', 'B0CPXX34K2', 'B09LYYYGZN', 'B0DG2YDL7Y', 'B0CWS1SL9F', 'B07NS5QPJM', 'B0D2H7LK22', 'B0CNSX68K8', 'B0D95YDCV9', 'B0CPGJ5W6K', 'B0DFWK73S9', 'B0CZHXJS2M', 'B0C6F9Y43N', 'B0BYMP9KZP', 'B08HN8F1MC', 'B0DCZBXY43', 'B0DBLWQL1R', 'B0CNQ5WD9K', 'B0B1PV8Z1C', 'B0D6GNS4KN', 'B0CNKT2D1G', 'B0D792W9CK', 'B07WDKKP6L', 'B0DCP4BDMM', 'B0CQYMCG9R', 'B0DJY61YY2', 'B0CS6K1NFH', 'B0CG91YS95', 'B0BWJTL7GZ', 'B0C5RW892R', 'B0DCBZ2HXY', 'B0CVQ86VDB', 'B0CPXYTPYG', 'B0DF8331S3', 'B0DKNVBD41', 'B0D943Z33Y', 'B0CHP1LXTT', 'B0DHZJW5Z4', 'B0CPT8SK6H', 'B0DH243L65', 'B0CXJDKQXR', 'B0DFPRT8V2', 'B0DH2437SY', 'B0CPT9XDS7', 'B0D2RR7JQZ', 'B0CTHYFRHH', 'B0CYGJJHFW', 'B0CWS285P6', 'B0CSG93BF7', 'B0D4SMFD94', 'B0CN3GWSP4', 'B0DL4831YZ', 'B0D97XWKKT', 'B0CQ59K8F9', 'B0D5292XN3', 'B0DG6JW8PK', 'B0BVZ65S6Y', 'B0DBL2KD59', 'B0CNR4SN1Q', 'B07VTP4ZQW', 'B0DHZ6LBT8', 'B0DKSR4H2T', 'B0CX272D4J', 'B0CN12K224', 'B0CVQL3L2K', 'B0CV7R71NY', 'B0D266YCVL', 'B07VTMHTDF', 'B0DCC3FQJ3', 'B0CXHC9B82', 'B0CN137WV2', 'B0DJ2XZHLZ', 'B0BXJ8VY2V', 'B0DHRQCB1G', 'B0CYLWTZD1', 'B0C6FDCPB1', 'B0DKP63HXT', 'B0DMCLZBYX', 'B0DL2XNSPR', 'B0CFV31YBL', 'B0DL48WY7G', 'B0DH23VGF7', 'B0DGXZ8763', 'B0BW66P9XN', 'B0CQJRHSDR']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "import time\n",
+    "\n",
+    "# Configurar Selenium con Chrome\n",
+    "options = Options()\n",
+    "options.add_argument(\"--headless\")  \n",
+    "options.add_argument(\"--disable-blink-features=AutomationControlled\")  \n",
+    "options.add_argument(\"start-maximized\")  \n",
+    "options.add_argument(\"disable-infobars\")\n",
+    "\n",
+    "\n",
+    "# Inicializar el driver\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "\n",
+    "# URL de búsqueda en Amazon España\n",
+    "url = \"https://www.amazon.es/s?k=mobil&__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=18LZTS0F1Q8I7&sprefix=mobil%2Caps%2C125&ref=nb_sb_noss_1\"\n",
+    "\n",
+    "# Cargar la primera página\n",
+    "driver.get(url)\n",
+    "time.sleep(3)\n",
+    "\n",
+    "# Lista para almacenar todos los data-asin\n",
+    "data_asins_total = []  \n",
+    "\n",
+    "while True:\n",
+    "    # Extraer los data-asin de la página actual\n",
+    "    productos = driver.find_elements(By.CSS_SELECTOR, 'div[data-asin]')\n",
+    "    data_asins = [p.get_attribute(\"data-asin\") for p in productos if p.get_attribute(\"data-asin\")]\n",
+    "    # Guardar los data-asin obtenidos\n",
+    "    data_asins_total.extend(data_asins)\n",
+    "    # Guardar los resultados en un archivo\n",
+    "    with open(\"data_asins.txt\", \"w\") as f:\n",
+    "        f.write(\"\\n\".join(data_asins_total))\n",
+    "    \n",
+    "    # Intentar encontrar el botón de la siguiente página\n",
+    "    try:\n",
+    "        next_button = driver.find_element(By.CSS_SELECTOR, \"a.s-pagination-item.s-pagination-button\")\n",
+    "        next_page_url = next_button.get_attribute(\"href\")  # Obtener la URL de la siguiente página\n",
+    "        \n",
+    "        if next_page_url:\n",
+    "            driver.get(next_page_url)  # Ir a la siguiente página\n",
+    "            time.sleep(6)  # Esperar la carga\n",
+    "        else:\n",
+    "            print(\"No hay URL\")\n",
+    "            break  # Si no hay URL, terminamos\n",
+    "            \n",
+    "    except:\n",
+    "        print(\"No hay botón\")\n",
+    "        break  # Si no hay botón \"Siguiente\", salimos del bucle\n",
+    "\n",
+    "# Imprimir los resultados\n",
+    "print(data_asins_total)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Cerrar el navegador\n",
+    "driver.quit()\n"
    ]
   },
   {
@@ -4004,8 +4094,8 @@
     "API_KEYS = [\n",
     "    \"b8c33a42admsh1eb667b2e78c8dcp1d2e65jsnce7335e1d5b4\",\n",
     "    \"fdcd4c06b5msha7a5970ae873ae9p1d5117jsnaa7f64e9591a\",\n",
-    "    \"9cc241fb85msh3aa2a8b9546eeefp1a83d7jsnbd9d14a4db88\",\n",
-    "    \"cb9b30c4f5msh993e47ab995a9dap1ff320jsn7894564a7793\"\n",
+    "    #\"9cc241fb85msh3aa2a8b9546eeefp1a83d7jsnbd9d14a4db88\",\n",
+    "    #\"cb9b30c4f5msh993e47ab995a9dap1ff320jsn7894564a7793\",\n",
     "]\n",
     "current_api_index = 0 \n",
     "# ASIN_LIST = [\"B0DL4831YZ\", \"B0DHZJW5Z4\", \"B0BRQMC66M\", \"B0CTHYFRHH\", \"B0CPLLJ367\", \"B0D2RQ8R19\", \"B0CV7R71NY\"]\n",
@@ -4100,7 +4190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gitvenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4114,7 +4204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
